--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch:app": "sleep 10 && ng serve --open",
     "clean": "rimraf coverage dist",
     "build": "npm-run-all clean lint build:* e2e",
-    "build:test": "ng test @politie/ngx-sherlock --no-watch --browsers=ChromeHeadless --codeCoverage",
+    "build:test": "ng test @politie/ngx-sherlock --no-watch --browsers=ChromeHeadless --code-coverage",
     "build:build": "ng build @politie/ngx-sherlock",
     "test": "ng test @politie/ngx-sherlock",
     "lint": "ng lint",
@@ -16,34 +16,33 @@
   "private": true,
   "license": "Apache-2.0",
   "dependencies": {
-    "@angular/animations": "^11.2.14",
-    "@angular/common": "^11.2.14",
-    "@angular/compiler": "^11.2.14",
-    "@angular/core": "^11.2.14",
-    "@angular/forms": "^11.2.14",
-    "@angular/platform-browser": "^11.2.14",
-    "@angular/platform-browser-dynamic": "^11.2.14",
-    "@angular/router": "^11.2.14",
+    "@angular/animations": "^12.2.15",
+    "@angular/common": "^12.2.15",
+    "@angular/compiler": "^12.2.15",
+    "@angular/core": "^12.2.15",
+    "@angular/forms": "^12.2.15",
+    "@angular/platform-browser": "^12.2.15",
+    "@angular/platform-browser-dynamic": "^12.2.15",
+    "@angular/router": "^12.2.15",
     "@politie/sherlock": "^3.3.8",
     "@politie/sherlock-proxy": "^3.3.8",
     "@politie/sherlock-rxjs": "^3.3.8",
     "core-js": "^3.14.0",
     "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
-    "zone.js": "^0.11.4"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.16",
-    "@angular/cli": "~11.2.16",
-    "@angular/compiler-cli": "^11.2.14",
-    "@angular/language-service": "^11.2.14",
+    "@angular-devkit/build-angular": "~12.2.14",
+    "@angular/cli": "~12.2.14",
+    "@angular/compiler-cli": "^12.2.15",
+    "@angular/language-service": "^12.2.15",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.6",
     "@types/node": "^15.12.2",
     "codelyzer": "^6.0.0",
-    "coveralls": "^3.0.3",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-core": "^3.7.1",
+    "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
@@ -55,6 +54,6 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.7"
+    "typescript": "~4.3.5"
   }
 }
