--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@politie/sherlock": "^3.3.8",
     "@politie/sherlock-proxy": "^3.3.8",
     "@politie/sherlock-rxjs": "^3.3.8",
-    "core-js": "^3.14.0",
     "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -37,23 +36,23 @@
     "@angular/cli": "~12.2.14",
     "@angular/compiler-cli": "^12.2.15",
     "@angular/language-service": "^12.2.15",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.6",
-    "@types/node": "^15.12.2",
+    "@types/jasmine": "~3.10.2",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/node": "^17.0.2",
     "codelyzer": "^6.0.0",
     "jasmine-core": "^3.7.1",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.3.4",
+    "karma": "^6.3.9",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-coverage": "^2.1.0",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "ng-packagr": "^12.0.8",
     "npm-run-all": "^4.1.5",
     "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.0.0",
-    "tslint": "~6.1.0",
+    "tslint": "~6.1.3",
     "typescript": "~4.3.5"
   }
 }
