--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "watch:lib": "ng build @politie/ngx-sherlock --watch",
     "watch:app": "sleep 10 && ng serve --open",
     "clean": "rimraf coverage dist",
-    "build": "npm-run-all clean lint build:* e2e",
-    "build:test": "ng test @politie/ngx-sherlock --no-watch --browsers=ChromeHeadless --code-coverage",
+    "build": "npm-run-all clean lint test:ci build:build e2e",
+    "build:ci": "npm-run-all clean lint test:ci build:prod e2e",
     "build:build": "ng build @politie/ngx-sherlock",
+    "build:prod": "ng build @politie/ngx-sherlock --configuration production",
     "test": "ng test @politie/ngx-sherlock",
+    "test:ci": "ng test @politie/ngx-sherlock --no-watch --browsers=ChromeHeadless --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
