--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "ts-node": "^10.0.0",
     "tslint": "~6.1.3",
     "typescript": "~4.3.5"
+  },
+  "overrides": {
+    "webpack@5.50.0": "5.74.0"
   }
 }
