--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@angular/language-service": "^12.2.15",
     "@types/jasmine": "~3.10.2",
     "@types/jasminewd2": "~2.0.10",
-    "@types/node": "^17.0.2",
+    "@types/node": "^18.6.3",
     "codelyzer": "^6.0.0",
     "jasmine-core": "^3.7.1",
     "jasmine-spec-reporter": "^7.0.0",
@@ -56,5 +56,8 @@
     "ts-node": "^10.0.0",
     "tslint": "~6.1.3",
     "typescript": "~4.3.5"
+  },
+  "overrides": {
+    "webpack@5.50.0": "5.74.0"
   }
 }
