--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,6 +79,8 @@ jobs:
       - name: Release
         uses: JS-DevTools/npm-publish@v1
         with:
-          # This is an automation type NPM access token.
+          # This is a granular NPM access token with
+          # "Packages and scopes" permission "Read and write"
+          # for this package only.
           token: ${{ secrets.WORKFLOW_NPM_TOKEN }}
           package: dist/politie/ngx-sherlock/package.json
