--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,4 +85,4 @@ jobs:
         run: echo "//registry.npmjs.org/:_authToken=$npmToken" >> .npmrc
         
       - name: Release
-        run: npm publish ./dist/politie/ngx-sherlock/package.json
+        run: npm publish ./dist/politie/ngx-sherlock
