--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Build
         run: npm run build:build
 
-      - name: Cypress e2e test
-        uses: cypress-io/github-action@v6
-        with:
-          start: npm start
-          browser: chrome
+      - name: Start Application
+        run: npm start & wait-on http://localhost:4200
+
+      - name: E2E
+        run: npm run cypress:run
