--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
   "private": true,
   "license": "Apache-2.0",
   "dependencies": {
-    "@angular/animations": "^12.2.15",
-    "@angular/common": "^12.2.15",
-    "@angular/compiler": "^12.2.15",
-    "@angular/core": "^12.2.15",
-    "@angular/forms": "^12.2.15",
-    "@angular/platform-browser": "^12.2.15",
-    "@angular/platform-browser-dynamic": "^12.2.15",
-    "@angular/router": "^12.2.15",
+    "@angular/animations": "^13.4.0",
+    "@angular/common": "^13.4.0",
+    "@angular/compiler": "^13.4.0",
+    "@angular/core": "^13.4.0",
+    "@angular/forms": "^13.4.0",
+    "@angular/platform-browser": "^13.4.0",
+    "@angular/platform-browser-dynamic": "^13.4.0",
+    "@angular/router": "^13.4.0",
     "@politie/sherlock": "^3.3.8",
     "@politie/sherlock-proxy": "^3.3.8",
     "@politie/sherlock-rxjs": "^3.3.8",
@@ -36,16 +36,23 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.14",
-    "@angular/cli": "~12.2.14",
-    "@angular/compiler-cli": "^12.2.15",
-    "@angular/language-service": "^12.2.15",
+    "@angular-devkit/build-angular": "~13.3.11",
+    "@angular-eslint/builder": "13.5.0",
+    "@angular-eslint/eslint-plugin": "13.5.0",
+    "@angular-eslint/eslint-plugin-template": "13.5.0",
+    "@angular-eslint/schematics": "13.5.0",
+    "@angular-eslint/template-parser": "13.5.0",
+    "@angular/cli": "~13.3.11",
+    "@angular/compiler-cli": "^13.4.0",
+    "@angular/language-service": "^13.4.0",
     "@cypress/schematic": "2.4.0",
     "@types/jasmine": "~3.10.2",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^18.6.3",
-    "codelyzer": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "5.27.1",
+    "@typescript-eslint/parser": "5.27.1",
     "cypress": "^13.7.1",
+    "eslint": "^8.17.0",
     "jasmine-core": "^3.7.1",
     "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.3.16",
@@ -53,12 +60,11 @@
     "karma-coverage": "^2.1.0",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "ng-packagr": "^12.0.8",
+    "ng-packagr": "^13.3.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "ts-node": "^10.0.0",
-    "tslint": "~6.1.3",
-    "typescript": "~4.3.5"
+    "typescript": "~4.6.4"
   },
   "overrides": {
     "webpack@5.50.0": "5.74.0"
