--- a/package.json
+++ b/package.json
@@ -20,32 +20,39 @@
   "private": true,
   "license": "Apache-2.0",
   "dependencies": {
-    "@angular/animations": "^12.2.15",
-    "@angular/common": "^12.2.15",
-    "@angular/compiler": "^12.2.15",
-    "@angular/core": "^12.2.15",
-    "@angular/forms": "^12.2.15",
-    "@angular/platform-browser": "^12.2.15",
-    "@angular/platform-browser-dynamic": "^12.2.15",
-    "@angular/router": "^12.2.15",
-    "@politie/sherlock": "^3.3.8",
-    "@politie/sherlock-proxy": "^3.3.8",
-    "@politie/sherlock-rxjs": "^3.3.8",
+    "@angular/animations": "^15.2.10",
+    "@angular/common": "^15.2.10",
+    "@angular/compiler": "^15.2.10",
+    "@angular/core": "^15.2.10",
+    "@angular/forms": "^15.2.10",
+    "@angular/platform-browser": "^15.2.10",
+    "@angular/platform-browser-dynamic": "^15.2.10",
+    "@angular/router": "^15.2.10",
+    "@politie/sherlock": "^3.4.16",
+    "@politie/sherlock-proxy": "^3.4.16",
+    "@politie/sherlock-rxjs": "^3.4.16",
     "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.14",
-    "@angular/cli": "~12.2.14",
-    "@angular/compiler-cli": "^12.2.15",
-    "@angular/language-service": "^12.2.15",
+    "@angular-devkit/build-angular": "^15.2.11",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
+    "@angular/cli": "^15.2.11",
+    "@angular/compiler-cli": "^15.2.10",
+    "@angular/language-service": "^15.2.10",
     "@cypress/schematic": "2.4.0",
     "@types/jasmine": "~3.10.2",
     "@types/jasminewd2": "~2.0.10",
-    "@types/node": "^18.6.3",
-    "codelyzer": "^6.0.0",
+    "@types/node": "^20.12.13",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "cypress": "^13.7.1",
+    "eslint": "^8.28.0",
     "jasmine-core": "^3.7.1",
     "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.3.16",
@@ -53,14 +60,10 @@
     "karma-coverage": "^2.1.0",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "ng-packagr": "^12.0.8",
+    "ng-packagr": "^15.2.2",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "ts-node": "^10.0.0",
-    "tslint": "~6.1.3",
-    "typescript": "~4.3.5"
-  },
-  "overrides": {
-    "webpack@5.50.0": "5.74.0"
+    "typescript": "^4.6.4"
   }
 }
