--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,32 @@
 {
     "compileOnSave": false,
     "compilerOptions": {
-        "baseUrl": "./",
-        "outDir": "./dist/out-tsc",
-        "sourceMap": true,
-        "declaration": false,
-        "module": "es2020",
-        "moduleResolution": "node",
-        "experimentalDecorators": true,
-        "target": "es2015",
-        "strict": true,
-        "noImplicitAny": true,
-        "noImplicitReturns": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "importHelpers": true,
-        "lib": [
-            "es2017",
-            "dom"
+      "baseUrl": "./",
+      "outDir": "./dist/out-tsc",
+      "sourceMap": true,
+      "declaration": false,
+      "module": "es2020",
+      "moduleResolution": "node",
+      "experimentalDecorators": true,
+      "target": "ES2022",
+      "strict": true,
+      "noImplicitAny": true,
+      "noImplicitReturns": true,
+      "noUnusedLocals": true,
+      "noUnusedParameters": true,
+      "importHelpers": true,
+      "lib": [
+        "es2017",
+        "dom"
+      ],
+      "paths": {
+        "@politie/ngx-sherlock": [
+          "dist/politie/ngx-sherlock"
         ],
-        "paths": {
-            "@politie/ngx-sherlock": [
-                "dist/politie/ngx-sherlock"
-            ],
-            "@politie/ngx-sherlock/*": [
-                "dist/politie/ngx-sherlock/*"
-            ]
-        }
+        "@politie/ngx-sherlock/*": [
+          "dist/politie/ngx-sherlock/*"
+        ]
+      },
+      "useDefineForClassFields": false
     }
 }
