--- a/package.json
+++ b/package.json
@@ -44,25 +44,22 @@
     "@angular/cli": "^18.2.21",
     "@angular/compiler-cli": "^18.2.14",
     "@angular/language-service": "^18.2.14",
-    "@cypress/schematic": "2.4.0",
-    "@types/jasmine": "~3.10.2",
-    "@types/jasminewd2": "~2.0.10",
+    "@types/jasmine": "^5.1.9",
     "@types/node": "^24.5.2",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
-    "cypress": "^13.7.1",
+    "cypress": "^15.3.0",
     "eslint": "^8.57.0",
-    "jasmine-core": "^3.7.1",
+    "jasmine-core": "^5.10.0",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.3.16",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "^2.1.0",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "ng-packagr": "^18.2.1",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
-    "ts-node": "^10.0.0",
-    "typescript": "^5.4.5"
+    "rimraf": "^6.0.1",
+    "typescript": "^5.5.4"
   }
 }
